--- a/views/public/producto2.html
+++ b/views/public/producto2.html
@@ -1,65 +1,132 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Producto</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="../../resources/css/public2.css">
+    <title>Producto</title>
 </head>
 
 <body class="bg-dark">
-    <header>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="navbar bg-primary mt-0 pt-2 px-0" id="nav-info">
-                    <div class="container-fluid bg-primary d-flex justify-content-center">
-                        <!-- desaparece en pantallas pequeñas -->
-                        <ul class="list-inline mb-0 d-none d-lg-inline-block p-1">
-                            <li class="list-inline-item opacity-75 mr-2">
-                                <a class="text-light text-small pl-0 pr-2" href="">+503 2345 4657 &nbsp; | &nbsp;</a>
-                            </li>
-                            <li class="list-inline-item opacity-75 mr-2">
-                                <a class="text-light font-size-sm pl-0 pr-2" href=""><img
-                                        src="https://img.icons8.com/ios/24/FFFFFF/mail.png" />&nbsp;
-                                    Sublisivarte@gmail.com &nbsp; | &nbsp; </a>
-                            </li>
-                        </ul>
-                        <div class="d-flex justify-content-around">
-                            <div class="d-flex">
-                                <ul class="list-inline mb-0 d-none d-lg-inline-block p-1">
-                                    <li class="list-inline-item opacity-75 mr-2">
-                                        <a class="text-light text-small pl-0 pr-2" href="">Nosotros &nbsp; |
-                                            &nbsp;</a>
-                                    </li>
-                                    <li class="list-inline-item opacity-75 mr-2">
-                                        <a class="text-light text-small pl-0 pr-2" href="">Centro de ayuda &nbsp; |
-                                            &nbsp;</a>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="d-flex flex-nowrap align-self-center">
-                                <a href=""><img
-                                        src="https://img.icons8.com/material-rounded/18/FFFFFF/facebook.png" />&nbsp;</a>
-                                <a href=""><img
-                                        src="https://img.icons8.com/windows/20/FFFFFF/instagram-new.png" />&nbsp;</a>
-                                <a href=""><img src="https://img.icons8.com/ios/16/FFFFFF/whatsapp--v1.png" />&nbsp;</a>
-                                <a href=""><img
-                                        src="https://img.icons8.com/ios-filled/16/FFFFFF/twitter.png" />&nbsp;</a>
+    <main>
+        <header>
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="navbar bg-primary mt-0 pt-2 px-0" id="nav-info">
+                        <div class="container-fluid bg-primary d-flex justify-content-center ">
+                            <!-- desaparece en pantallas pequeñas -->
+                            <ul class="list-inline mb-0 d-none d-lg-inline-block p-1">
+                                <li class="list-inline-item opacity-75 mr-2">
+                                    <a class="text-light text-small pl-0 pr-2" href="">+503 2345 4657 &nbsp; |
+                                        &nbsp;</a>
+                                </li>
+                                <li class="list-inline-item opacity-75 mr-2">
+                                    <a class="text-light font-size-sm pl-0 pr-2" href=""><img
+                                            src="https://img.icons8.com/ios/24/FFFFFF/mail.png" />&nbsp;
+                                        Sublisivarte@gmail.com &nbsp; | &nbsp; </a>
+                                </li>
+                            </ul>
+                            <div class="d-flex justify-content-around">
+                                <div class="d-flex">
+                                    <ul class="list-inline mb-0 d-none d-lg-inline-block p-1">
+                                        <li class="list-inline-item opacity-75 mr-2">
+                                            <a class="text-light text-small pl-0 pr-2" href="">Nosotros &nbsp; |
+                                                &nbsp;</a>
+                                        </li>
+                                        <li class="list-inline-item opacity-75 mr-2">
+                                            <a class="text-light text-small pl-0 pr-2" href="">Centro de ayuda &nbsp; |
+                                                &nbsp;</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <div class="d-flex flex-nowrap align-self-center">
+                                    <a href=""><img
+                                            src="https://img.icons8.com/material-rounded/18/FFFFFF/facebook.png" />&nbsp;</a>
+                                    <a href=""><img
+                                            src="https://img.icons8.com/windows/20/FFFFFF/instagram-new.png" />&nbsp;</a>
+                                    <a href=""><img
+                                            src="https://img.icons8.com/ios/16/FFFFFF/whatsapp--v1.png" />&nbsp;</a>
+                                    <a href=""><img
+                                            src="https://img.icons8.com/ios-filled/16/FFFFFF/twitter.png" />&nbsp;</a>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
+        </header>
+        <div>
+            <h2 class="ms-5 mt-3 text-light">Camiseta</h3>
+        </div>
+        <div class="container row">
+            <div class="col-2 ms-4 mt-3">
+                <div class="card mt" style="width: 10rem;">
+                    <img src="../../resources/images/camisas.jpg" class="card-img-top" alt="...">
+                </div>
+                <div class="mt-3"></div>
+                <div class="card" style="width: 10rem;">
+                    <img src="../../resources/images/camisas.jpg" class="card-img-top" alt="...">
+                </div>
+                <div class="mt-3"></div>
+                <div class="card" style="width: 10rem;">
+                    <img src="../../resources/images/camisas.jpg" class="card-img-top" alt="...">
+                </div>
+            </div>
+            <div class="col-5 mt-3">
+                <div id="carouselExampleIndicators" class="carousel slide">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                            class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                            aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                            aria-label="Slide 3"></button>
+                    </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="../../resources/images/camisas.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="../../resources/images/camisas.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="../../resources/images/camisas.jpg" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </div>
+            <div class="col-2">
+                <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
+                    <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
+                    <label class="btn btn-outline-secondary" for="btnradio1">S</label>
+
+                    <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
+                    <label class="btn btn-outline-secondary" for="btnradio2">M</label>
+
+                    <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
+                    <label class="btn btn-outline-secondary" for="btnradio3">L</label>
+
+                    <input type="radio" class="btn-check" name="btnradio" id="btnradio4" autocomplete="off">
+                    <label class="btn btn-outline-secondary" for="btnradio4">XL</label>
+                </div>
             </div>
         </div>
-    </header>
-    <main>
-        
+        <footer></footer>
     </main>
-    <footer></footer>
 </body>
 
 </html>
