--- a/views/public/producto2.html
+++ b/views/public/producto2.html
@@ -63,7 +63,7 @@
             <h2 class="ms-5 mt-3 text-light">Camiseta</h3>
         </div>
         <div class="container row">
-            <div class="col-2 ms-4 mt-3">
+            <div class="col-2 ms-4 mt-3" id="cards">
                 <div class="card mt" style="width: 10rem;">
                     <img src="../../resources/images/camisas.jpg" class="card-img-top" alt="...">
                 </div>
