--- a/resources/css/public2.css
+++ b/resources/css/public2.css
@@ -444,3 +444,7 @@ a {
 .btn-check:active+.btn-outline-secondary, .btn-check:checked+.btn-outline-secondary, .btn-outline-secondary.active, .btn-outline-secondary.dropdown-toggle.show, .btn-outline-secondary:active{
     background-color: var(--bg-primary) !important;
 }
+
+#cards, .card{
+    border: none;
+}
