--- a/views/public/producto2.html
+++ b/views/public/producto2.html
@@ -76,7 +76,7 @@
                     <img src="../../resources/images/camisas.jpg" class="card-img-top" alt="...">
                 </div>
             </div>
-            <div class="col-5 mt-3">
+            <div class="col-6 mt-3">
                 <div id="carouselExampleIndicators" class="carousel slide">
                     <div class="carousel-indicators">
                         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
@@ -88,7 +88,7 @@
                     </div>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="../../resources/images/camisas.jpg" class="d-block w-100" alt="...">
+                            <img src="../../resources/images/camisas.jpg" class="d-block w-100 h-100" alt="...">
                         </div>
                         <div class="carousel-item">
                             <img src="../../resources/images/camisas.jpg" class="d-block w-100" alt="...">
@@ -122,6 +122,21 @@
 
                     <input type="radio" class="btn-check" name="btnradio" id="btnradio4" autocomplete="off">
                     <label class="btn btn-outline-secondary" for="btnradio4">XL</label>
+                </div>
+                <div>
+                    <form>
+                        <div class="form-group">
+                            <div class="col-1">
+                                <button type="button" class="btn btn-primary">Agregar</button>
+                            </div>
+                            <div class="col-2">
+                                <input type="number" class="form-control" min="0" value="0">
+                            </div>
+                            <div class="col-1">
+                                <button type="button" class="btn btn-danger">Quitar</button>
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
