--- a/views/include/nav.ejs
+++ b/views/include/nav.ejs
@@ -38,7 +38,7 @@
         <a href="" class="logo mb-0 d-none d-lg-inline-block"><img src="../../resources/images/logo.png" alt=""
                 class="logo-img"></a>
         <nav class="navegation">
-            <a href="../public/index.html">Inicio</a>
+            <a href="/">Inicio</a>
             <a href="/products">Productos</a>
             <% if(user == false ) { %>
                 <%- include('login') %>
