--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -26,5 +26,6 @@
         integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/nav-login.js"></script>
+    <script src="/controllers/dasboard/productos.js"></script>
 </body>
 </html>
