--- a/views/include/nav.ejs
+++ b/views/include/nav.ejs
@@ -46,7 +46,7 @@
                 <% if(user.role == 'admin'){ %>
                     <a href="/logOut/users"> <%= user.user %> </a>
                 <% } else { %>
-                    <a href="../public/carrito.html">Carrito</a>
+                    <a href="/carrito">Carrito</a>
                     <a href="/logOut/users"> <%= user.user %> </a>
                 <% } %>
             <% } %>
