--- a/views/include/newList.ejs
+++ b/views/include/newList.ejs
@@ -28,7 +28,7 @@
                             <div class="input-group mb-3" hidden>
                                 <span class="input-group-text" id="inputGroup-sizing-default">Nombre: </span>
                                 <input type="text" class="form-control" aria-label="Sizing example input"
-                                    aria-describedby="inputGroup-sizing-default" name="user" value="<%= user %>">
+                                    aria-describedby="inputGroup-sizing-default" name="user" value="<%= user.user %>">
                             </div>
                         </div>
                         <div class="modal-footer">
