--- a/views/public/producto2.html
+++ b/views/public/producto2.html
@@ -59,58 +59,53 @@
                     </div>
                 </div>
         </header>
-        <div>
-            <h2 class="ms-5 mt-3 text-light">Camiseta</h3>
-        </div>
-        <div class="container row">
-            <div class="col-2 ms-4 mt-3" id="cards">
-                <div class="card mt" style="width: 10rem;">
+        <div class="container-fluid row">
+            <div class="container alakazam col-2 mt-3" id="cards">
+                <div class="card mt" style="width: 7rem;">
                     <img src="../../resources/images/camisas.jpg" class="card-img-top" alt="...">
                 </div>
                 <div class="mt-3"></div>
-                <div class="card" style="width: 10rem;">
+                <div class="card" style="width: 7rem;">
                     <img src="../../resources/images/camisas.jpg" class="card-img-top" alt="...">
                 </div>
                 <div class="mt-3"></div>
-                <div class="card" style="width: 10rem;">
+                <div class="card" style="width: 7rem;">
                     <img src="../../resources/images/camisas.jpg" class="card-img-top" alt="...">
                 </div>
             </div>
-            <div class="col-6 mt-3">
-                <div id="carouselExampleIndicators" class="carousel slide">
-                    <div class="carousel-indicators">
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
-                            class="active" aria-current="true" aria-label="Slide 1"></button>
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                            aria-label="Slide 2"></button>
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                            aria-label="Slide 3"></button>
-                    </div>
+            <div class="col-6 mt-3 row">
+                <div id="carouselExample" class="carousel slide">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="../../resources/images/camisas.jpg" class="d-block w-100 h-100" alt="...">
+                            <img src="../../resources/images/lorem.png" class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="../../resources/images/camisas.jpg" class="d-block w-100" alt="...">
+                            <img src="../../resources/images/lorem.png" class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="../../resources/images/camisas.jpg" class="d-block w-100" alt="...">
+                            <img src="../../resources/images/lorem.png" class="d-block w-100" alt="...">
                         </div>
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
                         data-bs-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Previous</span>
                     </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
                         data-bs-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Next</span>
                     </button>
                 </div>
             </div>
-            <div class="col-2">
-                <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
+            <div class="col-4 mt-5">
+                <div>
+                    <h1 class="text-light mt-4">$nombre_producto</h1>
+                    <h2 class="text-light mt-4">$numero_referencia</h2>
+                    <h2 class="text-light mt-4">$precio</h2>
+                    <h2 class="text-light mt-4">$categoria</h2>
+                </div>
+                <div class="col-3 mt-4 btn-group" role="group" aria-label="Basic radio toggle button group">
                     <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
                     <label class="btn btn-outline-secondary" for="btnradio1">S</label>
 
@@ -123,25 +118,83 @@
                     <input type="radio" class="btn-check" name="btnradio" id="btnradio4" autocomplete="off">
                     <label class="btn btn-outline-secondary" for="btnradio4">XL</label>
                 </div>
-                <div>
-                    <form>
-                        <div class="form-group">
-                            <div class="col-1">
-                                <button type="button" class="btn btn-primary">Agregar</button>
-                            </div>
-                            <div class="col-2">
-                                <input type="number" class="form-control" min="0" value="0">
-                            </div>
-                            <div class="col-1">
-                                <button type="button" class="btn btn-danger">Quitar</button>
+                <div class="mt-4">
+                    <ul class="pagination">
+                        <li class="page-item disabled"><a class="page-link" href="#">-</a></li>
+                        <li class="page-item disabled"><a class="page-link" href="#">0</a></li>
+                        <li class="page-item disabled"><a class="page-link" href="#">+</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-12 mt-3">
+                <div class="accordion" id="accordionExample">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button bg-dark text-light" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                Descripcion del producto
+                            </button>
+                        </h2>
+                        <div id="collapseOne" class="accordion-collapse collapse show bg-dark"
+                            data-bs-parent="#accordionExample">
+                            <div class="accordion-body text-light">
+                                <strong>Lorem, ipsum dolor sit amet consectetur</strong> Lorem ipsum dolor sit amet
+                                consectetur adipisicing elit. Quia necessitatibus ab tenetur asperiores nihil, facilis
+                                beatae in dicta debitis nemo, error, commodi eaque repudiandae aspernatur tempora odit
+                                quae. Molestias, vel.
+                                <code>.Lorem, ipsum</code>, Lorem, ipsum dolor sit amet
                             </div>
                         </div>
-                    </form>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button collapsed bg-dark text-light" type="button"
+                                data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false"
+                                aria-controls="collapseTwo">
+                                Especificaciones del producto
+                            </button>
+                        </h2>
+                        <div id="collapseTwo" class="accordion-collapse collapse bg-dark"
+                            data-bs-parent="#accordionExample">
+                            <div class="accordion-body text-light">
+                                <strong>Lorem, ipsum dolor sit amet consectetur</strong> Lorem ipsum dolor sit amet
+                                consectetur adipisicing elit. Quia necessitatibus ab tenetur asperiores nihil, facilis
+                                beatae in dicta debitis nemo, error, commodi eaque repudiandae aspernatur tempora odit
+                                quae. Molestias, vel.
+                                <code>.Lorem, ipsum</code>, Lorem, ipsum dolor sit amet
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button collapsed bg-dark text-light" type="button"
+                                data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false"
+                                aria-controls="collapseThree">
+                                Comentarios
+                            </button>
+                        </h2>
+                        <div id="collapseThree" class="accordion-collapse collapse bg-dark"
+                            data-bs-parent="#accordionExample">
+                            <div class="accordion-body text-light">
+                                <strong>Lorem, ipsum dolor sit amet consectetur</strong> Lorem ipsum dolor sit amet
+                                consectetur adipisicing elit. Quia necessitatibus ab tenetur asperiores nihil, facilis
+                                beatae in dicta debitis nemo, error, commodi eaque repudiandae aspernatur tempora odit
+                                quae. Molestias, vel.
+                                <code>.Lorem, ipsum</code>, Lorem, ipsum dolor sit amet
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
         <footer></footer>
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"
+        integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
