--- a/views/public/producto2.html
+++ b/views/public/producto2.html
@@ -59,31 +59,31 @@
                     </div>
                 </div>
         </header>
-        <div class="container-fluid row">
-            <div class="container alakazam col-2 mt-3" id="cards">
+        <div class="container row">
+            <div class="container alakazam col-2 mt-5" id="cards">
                 <div class="card mt" style="width: 7rem;">
-                    <img src="../../resources/images/camisas.jpg" class="card-img-top" alt="...">
+                    <img src="../../resources/images/camiseta1.jpg" class="card-img-top" alt="...">
                 </div>
                 <div class="mt-3"></div>
                 <div class="card" style="width: 7rem;">
-                    <img src="../../resources/images/camisas.jpg" class="card-img-top" alt="...">
+                    <img src="../../resources/images/camiseta2.jpg" class="card-img-top" alt="...">
                 </div>
                 <div class="mt-3"></div>
                 <div class="card" style="width: 7rem;">
-                    <img src="../../resources/images/camisas.jpg" class="card-img-top" alt="...">
+                    <img src="../../resources/images/camiseta3.jpg" class="card-img-top" alt="...">
                 </div>
             </div>
-            <div class="col-6 mt-3 row">
+            <div class="col-7 mt-5">
                 <div id="carouselExample" class="carousel slide">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="../../resources/images/lorem.png" class="d-block w-100" alt="...">
+                            <img src="../../resources/images/camiseta1.jpg" class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="../../resources/images/lorem.png" class="d-block w-100" alt="...">
+                            <img src="../../resources/images/camiseta2.jpg" class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="../../resources/images/lorem.png" class="d-block w-100" alt="...">
+                            <img src="../../resources/images/camiseta3.jpg" class="d-block w-100" alt="...">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
@@ -98,14 +98,14 @@
                     </button>
                 </div>
             </div>
-            <div class="col-4 mt-5">
+            <div class="col-3 mt-3">
                 <div>
                     <h1 class="text-light mt-4">$nombre_producto</h1>
                     <h2 class="text-light mt-4">$numero_referencia</h2>
                     <h2 class="text-light mt-4">$precio</h2>
                     <h2 class="text-light mt-4">$categoria</h2>
                 </div>
-                <div class="col-3 mt-4 btn-group" role="group" aria-label="Basic radio toggle button group">
+                <div class="mt-3 btn-group" role="group" aria-label="Basic radio toggle button group">
                     <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
                     <label class="btn btn-outline-secondary" for="btnradio1">S</label>
 
@@ -118,70 +118,74 @@
                     <input type="radio" class="btn-check" name="btnradio" id="btnradio4" autocomplete="off">
                     <label class="btn btn-outline-secondary" for="btnradio4">XL</label>
                 </div>
-                <div class="mt-4">
+                <div class="mt-3">
                     <ul class="pagination">
                         <li class="page-item disabled"><a class="page-link" href="#">-</a></li>
                         <li class="page-item disabled"><a class="page-link" href="#">0</a></li>
                         <li class="page-item disabled"><a class="page-link" href="#">+</a></li>
                     </ul>
                 </div>
+                <div class="mt-3">
+                    <button type="button" class="btn bg-primary text-light">Comprar</button>
+                    <button type="button" class="btn bg-secondary ms-3">Agregar al carrito</button>
+                </div>
             </div>
-            <div class="col-12 mt-3">
-                <div class="accordion" id="accordionExample">
-                    <div class="accordion-item">
-                        <h2 class="accordion-header">
-                            <button class="accordion-button bg-dark text-light" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                Descripcion del producto
-                            </button>
-                        </h2>
-                        <div id="collapseOne" class="accordion-collapse collapse show bg-dark"
-                            data-bs-parent="#accordionExample">
-                            <div class="accordion-body text-light">
-                                <strong>Lorem, ipsum dolor sit amet consectetur</strong> Lorem ipsum dolor sit amet
-                                consectetur adipisicing elit. Quia necessitatibus ab tenetur asperiores nihil, facilis
-                                beatae in dicta debitis nemo, error, commodi eaque repudiandae aspernatur tempora odit
-                                quae. Molestias, vel.
-                                <code>.Lorem, ipsum</code>, Lorem, ipsum dolor sit amet
-                            </div>
+        </div>
+        <div class="col-10 ms-4 mt-5">
+            <div class="accordion" id="accordionExample">
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button bg-dark text-light" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            Descripcion del producto
+                        </button>
+                    </h2>
+                    <div id="collapseOne" class="accordion-collapse collapse show bg-dark"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body text-light">
+                            <strong>Lorem, ipsum dolor sit amet consectetur</strong> Lorem ipsum dolor sit amet
+                            consectetur adipisicing elit. Quia necessitatibus ab tenetur asperiores nihil, facilis
+                            beatae in dicta debitis nemo, error, commodi eaque repudiandae aspernatur tempora odit
+                            quae. Molestias, vel.
+                            <code>.Lorem, ipsum</code>, Lorem, ipsum dolor sit amet
                         </div>
                     </div>
-                    <div class="accordion-item">
-                        <h2 class="accordion-header">
-                            <button class="accordion-button collapsed bg-dark text-light" type="button"
-                                data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false"
-                                aria-controls="collapseTwo">
-                                Especificaciones del producto
-                            </button>
-                        </h2>
-                        <div id="collapseTwo" class="accordion-collapse collapse bg-dark"
-                            data-bs-parent="#accordionExample">
-                            <div class="accordion-body text-light">
-                                <strong>Lorem, ipsum dolor sit amet consectetur</strong> Lorem ipsum dolor sit amet
-                                consectetur adipisicing elit. Quia necessitatibus ab tenetur asperiores nihil, facilis
-                                beatae in dicta debitis nemo, error, commodi eaque repudiandae aspernatur tempora odit
-                                quae. Molestias, vel.
-                                <code>.Lorem, ipsum</code>, Lorem, ipsum dolor sit amet
-                            </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed bg-dark text-light" type="button"
+                            data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false"
+                            aria-controls="collapseTwo">
+                            Especificaciones del producto
+                        </button>
+                    </h2>
+                    <div id="collapseTwo" class="accordion-collapse collapse bg-dark"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body text-light">
+                            <strong>Lorem, ipsum dolor sit amet consectetur</strong> Lorem ipsum dolor sit amet
+                            consectetur adipisicing elit. Quia necessitatibus ab tenetur asperiores nihil, facilis
+                            beatae in dicta debitis nemo, error, commodi eaque repudiandae aspernatur tempora odit
+                            quae. Molestias, vel.
+                            <code>.Lorem, ipsum</code>, Lorem, ipsum dolor sit amet
                         </div>
                     </div>
-                    <div class="accordion-item">
-                        <h2 class="accordion-header">
-                            <button class="accordion-button collapsed bg-dark text-light" type="button"
-                                data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false"
-                                aria-controls="collapseThree">
-                                Comentarios
-                            </button>
-                        </h2>
-                        <div id="collapseThree" class="accordion-collapse collapse bg-dark"
-                            data-bs-parent="#accordionExample">
-                            <div class="accordion-body text-light">
-                                <strong>Lorem, ipsum dolor sit amet consectetur</strong> Lorem ipsum dolor sit amet
-                                consectetur adipisicing elit. Quia necessitatibus ab tenetur asperiores nihil, facilis
-                                beatae in dicta debitis nemo, error, commodi eaque repudiandae aspernatur tempora odit
-                                quae. Molestias, vel.
-                                <code>.Lorem, ipsum</code>, Lorem, ipsum dolor sit amet
-                            </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed bg-dark text-light" type="button"
+                            data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false"
+                            aria-controls="collapseThree">
+                            Comentarios
+                        </button>
+                    </h2>
+                    <div id="collapseThree" class="accordion-collapse collapse bg-dark"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body text-light">
+                            <strong>Lorem, ipsum dolor sit amet consectetur</strong> Lorem ipsum dolor sit amet
+                            consectetur adipisicing elit. Quia necessitatibus ab tenetur asperiores nihil, facilis
+                            beatae in dicta debitis nemo, error, commodi eaque repudiandae aspernatur tempora odit
+                            quae. Molestias, vel.
+                            <code>.Lorem, ipsum</code>, Lorem, ipsum dolor sit amet
                         </div>
                     </div>
                 </div>
